# ethzasl_apriltag2

./: CMakeLists.txt
include/apriltags/: Edge.h  GLine2D.h  GLineSegment2D.h  Gaussian.h  MathUtil.h  Segment.h  TagDetection.h  TagDetector.h  TagFamily.h
src/: Edge.cc  FloatImage.cc  Gaussian.cc  Quad.cc  TagDetection.cc  TagDetector.cc  TagFamily.cc
